Striver A2Z: Binary Trees - 12, LC Weekly

--- a/practice/001.ipynb
+++ b/practice/001.ipynb
@@ -2762,6 +2762,7 @@
      "iopub.status.idle": "2024-04-13T17:24:00.922235Z",
      "shell.execute_reply": "2024-04-13T17:24:00.921371Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.026781,
      "end_time": "2024-04-13T17:24:00.923894",
@@ -2791,6 +2792,178 @@
     "\n",
     "# Testing the solution\n",
     "assert getHint(\"1122\", \"1222\") == \"3A0B\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6bbf3690",
+   "metadata": {},
+   "source": [
+    "Weekly LC - Sunday: 14th April, 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1254e925",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q1 - Easy\n",
+    "def findLatestTime(s: str) -> str:\n",
+    "    result = []\n",
+    "    for i in range(5):\n",
+    "        if s[i] == '?':\n",
+    "            if i == 0:\n",
+    "                result.append('0' if s[1].isdigit() and int(s[1]) > 1 else '1')\n",
+    "            elif i == 1:\n",
+    "                result.append('1' if result[0] == '1' else '9')\n",
+    "            elif i == 3:\n",
+    "                result.append('5')\n",
+    "            else:\n",
+    "                result.append('9')\n",
+    "        else:\n",
+    "            result.append(s[i])\n",
+    "\n",
+    "    return ''.join(result)\n",
+    "\n",
+    "# Testing the solution\n",
+    "findLatestTime(\"?2:3?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e9a187d",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q2 - Medium\n",
+    "def maximumPrimeDifference(nums: list[int]) -> int:\n",
+    "    primes = {2,3,5,7,11,13,17,19,23,29,31,37,41,43,47,53,59,61,67,71,73,79,83,89,97}\n",
+    "\n",
+    "    N = len(nums)\n",
+    "    for i in range(N):\n",
+    "        if nums[i] in primes:\n",
+    "            break\n",
+    "\n",
+    "    for j in range(N - 1, -1, -1):\n",
+    "        if nums[j] in primes:\n",
+    "            break\n",
+    "\n",
+    "    return j - i\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maximumPrimeDifference([4,2,9,5,3]) == 3\n",
+    "assert maximumPrimeDifference([4,8,2,8]) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d6959ea",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q3 - Hard\n",
+    "def findKthSmallestBrute(coins: list[int], k: int) -> int:\n",
+    "    curr = min(coins)\n",
+    "    while True:\n",
+    "        for coin in coins:\n",
+    "            if curr % coin == 0:\n",
+    "                k -= 1\n",
+    "                break\n",
+    "\n",
+    "        if k == 0:\n",
+    "            return curr\n",
+    "        else:\n",
+    "            curr += 1\n",
+    "\n",
+    "    return -1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findKthSmallestBrute([3,6,9], 3) == 9\n",
+    "assert findKthSmallestBrute([5,2], 7) == 12\n",
+    "\n",
+    "# Q3 - Hard Better (Solved this post the test, proud moment since the acceptance rate was 3%!\n",
+    "# Leetcode Writeup: https://leetcode.com/problems/kth-smallest-amount-with-single-denomination-combination/solutions/5020415/binary-search-solution-python\n",
+    "def findKthSmallest(coins: list[int], k: int) -> int:\n",
+    "    N = len(coins)\n",
+    "\n",
+    "    def count(num: int) -> int:\n",
+    "        \"\"\"\n",
+    "        Given num, find k_ (position after set union and sorting)\n",
+    "        For eg:\n",
+    "            num = 20, coins = [2, 5]\n",
+    "            => [2, 4, 5, 6, 8, 10, 12, 14, 15, 16, 18, 20]\n",
+    "            => 12\n",
+    "\n",
+    "        Logic:\n",
+    "            Assume we only had coin 2 available, 20's position would then be 20 // 2 = 10.\n",
+    "            We however have other denominations, so find count for each denomination.\n",
+    "            This way we would introduce duplicates - 10 would be counted twice.\n",
+    "            To avoid this we use formula: count(A | B) = count(A) + count(B) - count(A & B) extended for arbitrary length (A, B, C, ..)\n",
+    "        \"\"\"\n",
+    "        total, add_ = 0, True\n",
+    "\n",
+    "        for i in range(1, N + 1):\n",
+    "            curr = 0\n",
+    "            for comb in itertools.combinations(coins, r=i):\n",
+    "                curr += num // math.lcm(*comb)\n",
+    "            total = total + curr if add_ else total - curr\n",
+    "            add_ = not add_\n",
+    "\n",
+    "        return total\n",
+    "\n",
+    "    # Use a simple binary search\n",
+    "    # max => lowest denomination * k. The result must be lesser than this.\n",
+    "    low = min(coins)\n",
+    "    high = low * k\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        k_ = count(mid)\n",
+    "        if k_ < k:\n",
+    "            low = mid + 1\n",
+    "        else:\n",
+    "            high = mid - 1\n",
+    "\n",
+    "    return low\n",
+    "\n",
+    "# Testing the solution\n",
+    "for i in tqdm.tqdm(range(1, 100)):\n",
+    "    temp = list(range(11, 26))\n",
+    "    assert findKthSmallest(temp, i) == findKthSmallestBrute(temp, i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4add1b8",
+   "metadata": {},
+   "source": [
+    "Sum of left leaves\n",
+    "Problem Link: https://leetcode.com/problems/sum-of-left-leaves/submissions/1232098618"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08f2ccb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sumOfLeftLeaves(root: BinaryTreeNode, left: bool = True) -> int:\n",
+    "    if not root:\n",
+    "        return 0\n",
+    "    elif not root.left and not root.right:\n",
+    "        return root.val if left else 0\n",
+    "    else:\n",
+    "        return sumOfLeftLeaves(root.left, True) + sumOfLeftLeaves(root.right, False)"
    ]
   }
  ],
