--- a/study/striver-A2Z/10-trees.ipynb
+++ b/study/striver-A2Z/10-trees.ipynb
@@ -402,9 +402,18 @@
    },
    "source": [
     "Video Link: https://www.youtube.com/watch?v=Bfqd8BsPVuw&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=81\n",
-    "Iterative Preorder traversal\n",
-    "\n",
-    "# %%\n",
+    "Iterative Preorder traversal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6021695b",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
     "def preorderIter(root: BinaryTreeNode) -> list[int]:\n",
     "    \"\"\"\n",
     "    Root, Left, Right. The idea is the push right first and then the left,\n",
@@ -417,13 +426,13 @@
     "    while stack:\n",
     "        curr = stack.pop()\n",
     "        if curr:\n",
-    "            result.append(curr.val)\n",
-    "            stack.append(curr.right)\n",
-    "            stack.append(curr.left)\n",
+    "           result.append(curr.val)\n",
+    "           stack.append(curr.right)\n",
+    "           stack.append(curr.left)\n",
     "\n",
     "    return result\n",
     "\n",
-    "Testing the solution\n",
+    "# Testing the solution\n",
     "assert preorderIter(BinaryTreeNode.from_array([1, None, 2, 3])) == [1, 2, 3]\n",
     "assert preorderIter(BinaryTreeNode.from_array([1, 2, 7, 3, 4, None, None, None, None, 5, 6])) == [1, 2, 3, 4, 5, 6, 7]"
    ]
@@ -2691,6 +2700,7 @@
      "iopub.status.idle": "2024-04-13T17:24:05.638209Z",
      "shell.execute_reply": "2024-04-13T17:24:05.637454Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.029885,
      "end_time": "2024-04-13T17:24:05.639845",
@@ -2743,6 +2753,166 @@
     "out_lst = out.to_list() if out is not None else []\n",
     "while out_lst and out_lst[-1] is None: out_lst.pop()\n",
     "assert out_lst == [1,2,-13,None,None,4,25]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "611bda3a",
+   "metadata": {},
+   "source": [
+    "Morris traversal of Binary Tree\n",
+    "Video Link: https://youtu.be/80Zug6D1_r4?si=Npe19WIqtFI_aa5c\n",
+    "Advantage is that while it consumes O(N) time, it only takes up O(1) space"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22ad4618",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def morris_preorder(root: BinaryTreeNode) -> list[int]:\n",
+    "    curr: BinaryTreeNode = root\n",
+    "    preorder: list[int] = []\n",
+    "    while curr:\n",
+    "        # We are at root node\n",
+    "        if not curr.left:\n",
+    "            preorder.append(curr.val)\n",
+    "            curr = curr.right\n",
+    "\n",
+    "        # Create a thread on the right most guy in the left subtree to point to curr\n",
+    "        else:\n",
+    "            prev: BinaryTreeNode = curr.left\n",
+    "            while prev.right and prev.right != curr:\n",
+    "                prev = prev.right\n",
+    "\n",
+    "            # Thread doesn't already exist, create a thread add curr to stack and move left\n",
+    "            if not prev.right:\n",
+    "                prev.right = curr\n",
+    "                preorder.append(curr.val)\n",
+    "                curr = curr.left\n",
+    "\n",
+    "            # Thread already exists, remove thread and move to right\n",
+    "            else:\n",
+    "                prev.right = None\n",
+    "                curr = curr.right\n",
+    "\n",
+    "    return preorder\n",
+    "\n",
+    "# Testing the solution\n",
+    "temp = BinaryTreeNode.from_array([1, 2, 3, 4, None, 5, 6])\n",
+    "assert preorderIter(temp) == morris_preorder(temp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f115e204",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def morris_inorder(root: BinaryTreeNode) -> list[int]:\n",
+    "    curr: BinaryTreeNode = root\n",
+    "    inorder: list[int] = []\n",
+    "    while curr:\n",
+    "        if not curr.left:\n",
+    "            inorder.append(curr.val)\n",
+    "            curr = curr.right\n",
+    "        else:\n",
+    "            prev: BinaryTreeNode = curr.left\n",
+    "            while prev.right and prev.right != curr:\n",
+    "                prev = prev.right\n",
+    "\n",
+    "            if not prev.right:\n",
+    "                prev.right = curr\n",
+    "                curr = curr.left\n",
+    "            else:\n",
+    "                prev.right = None\n",
+    "                inorder.append(curr.val)\n",
+    "                curr = curr.right\n",
+    "\n",
+    "    return inorder\n",
+    "\n",
+    "# Testing the solution\n",
+    "temp = BinaryTreeNode.from_array([1, None, 2, 3, 4, 5, None, None, None, 3])\n",
+    "assert inorderIter(temp) == morris_inorder(temp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5feea81",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/sWf7k1x9XR4?si=6Fdn4oo2ryFIdqpg\n",
+    "Flatten a binary tree into a linked list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "023ec163",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Problem Link: https://leetcode.com/problems/flatten-binary-tree-to-linked-list/submissions/1231697617\n",
+    "def flatten(root: BinaryTreeNode) -> None:\n",
+    "    def backtrack(curr: BinaryTreeNode) -> tuple[BinaryTreeNode|None, BinaryTreeNode|None]:\n",
+    "        \"Flattens and returns root and the right most node\"\n",
+    "        if not curr:\n",
+    "            return (None, None)\n",
+    "        else:\n",
+    "            left_root, left_right = backtrack(curr.left)\n",
+    "            right_root, right_right = backtrack(curr.right)\n",
+    "            curr.left = None\n",
+    "            if left_root and left_right:\n",
+    "                curr.right = left_root\n",
+    "                left_right.right = right_root\n",
+    "\n",
+    "            return curr, right_right if right_root else left_right if left_root else curr\n",
+    "\n",
+    "    backtrack(root)\n",
+    "\n",
+    "# Testing the solution\n",
+    "temp = BinaryTreeNode.from_array([1,2,5,3,4,None,6])\n",
+    "flatten(temp)\n",
+    "temp.to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49e59c7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/flatten-binary-tree-to-linked-list/submissions/1232051009\n",
+    "def flattenStriver(root: BinaryTreeNode):\n",
+    "    \"\"\"\n",
+    "    Idea is to use a reverse post order: Right, Left, Root.\n",
+    "    Prev variable contains the right node connection for curr node to make.\n",
+    "    \"\"\"\n",
+    "    def backtrack(curr: BinaryTreeNode, prev: BinaryTreeNode):\n",
+    "        if curr:\n",
+    "            prev = backtrack(curr.right, prev)\n",
+    "            prev = backtrack(curr.left, prev)\n",
+    "            curr.left = None\n",
+    "            curr.right = prev\n",
+    "\n",
+    "        return curr if curr else prev\n",
+    "\n",
+    "    backtrack(root, None)\n",
+    "\n",
+    "# Testing the solution\n",
+    "temp = BinaryTreeNode.from_array([1,2,5,3,4,None,6])\n",
+    "flattenStriver(temp)\n",
+    "temp.to_list()"
    ]
   }
  ],
