Striver A2Z: BST: 1, Additional BST practice

--- a/study/striver-A2Z/10-trees.ipynb
+++ b/study/striver-A2Z/10-trees.ipynb
@@ -2981,6 +2981,7 @@
      "iopub.status.idle": "2024-04-14T10:25:13.323414Z",
      "shell.execute_reply": "2024-04-14T10:25:13.322614Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.029344,
      "end_time": "2024-04-14T10:25:13.325137",
@@ -3004,7 +3005,7 @@
    ],
    "source": [
     "# https://leetcode.com/problems/flatten-binary-tree-to-linked-list/submissions/1232051009\n",
-    "def flattenStriver(root: BinaryTreeNode):\n",
+    "def flattenStriverBacktrack(root: BinaryTreeNode):\n",
     "    \"\"\"\n",
     "    Idea is to use a reverse post order: Right, Left, Root.\n",
     "    Prev variable contains the right node connection for curr node to make.\n",
@@ -3022,7 +3023,33 @@
     "\n",
     "# Testing the solution\n",
     "temp = BinaryTreeNode.from_array([1,2,5,3,4,None,6])\n",
-    "flattenStriver(temp)\n",
+    "flattenStriverBacktrack(temp)\n",
+    "temp.to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4a662da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def flattenStriverIter(root: BinaryTreeNode):\n",
+    "    \"Same as code above but using stack\"\n",
+    "    stack: list[BinaryTreeNode] = [root]\n",
+    "    while stack:\n",
+    "        curr = stack.pop()\n",
+    "        if curr.right:\n",
+    "            stack.append(curr.right)\n",
+    "        if curr.left:\n",
+    "            stack.append(curr.left)\n",
+    "        curr.left = None\n",
+    "        if stack:\n",
+    "            curr.right = stack[-1]\n",
+    "\n",
+    "# Testing the solution\n",
+    "temp = BinaryTreeNode.from_array([1,2,5,3,4,None,6])\n",
+    "flattenStriverIter(temp)\n",
     "temp.to_list()"
    ]
   }
