--- a/practice/001.ipynb
+++ b/practice/001.ipynb
@@ -110,6 +110,10 @@
     "                visited.append(curr.val)\n",
     "            else:\n",
     "                visited.append(curr)\n",
+    "\n",
+    "        while visited and not visited[-1]:\n",
+    "            visited.pop()\n",
+    "\n",
     "        return visited\n",
     "\n",
     "    def __str__(self):\n",
@@ -3824,6 +3828,7 @@
      "iopub.status.idle": "2024-04-14T10:25:08.019527Z",
      "shell.execute_reply": "2024-04-14T10:25:08.018783Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.033795,
      "end_time": "2024-04-14T10:25:08.021135",
@@ -3842,6 +3847,110 @@
     "        return root.val if left else 0\n",
     "    else:\n",
     "        return sumOfLeftLeaves(root.left, True) + sumOfLeftLeaves(root.right, False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0222f378",
+   "metadata": {},
+   "source": [
+    "Minimum element in BST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2268cda1",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def minValue(root: BinaryTreeNode) -> int:\n",
+    "    \"Time Complexity: O(N)\"\n",
+    "    curr: BinaryTreeNode = root\n",
+    "    while curr and curr.left:\n",
+    "        curr = curr.left\n",
+    "\n",
+    "    return curr.val if curr else -1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "205a41bc",
+   "metadata": {},
+   "source": [
+    "Floor from BST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4b9c2fe",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Read input as specified in the question\n",
+    "# target, *nums = list(map(lambda x: int(x) if x != '-1' else None, input().split()))\n",
+    "target, nums = 11, [5, 2, 9, 1, 3, 6, 10]\n",
+    "k: float = -1\n",
+    "queue: list[BinaryTreeNode] = []\n",
+    "for num in nums:\n",
+    "    curr = BinaryTreeNode(num) if num else None\n",
+    "    if curr:\n",
+    "        queue.append(curr)\n",
+    "    if k == -1:\n",
+    "        k += 1\n",
+    "    elif int(k) == k:\n",
+    "        queue[int(k)].left = curr\n",
+    "        k += 0.5\n",
+    "    else:\n",
+    "        queue[int(k)].right = curr\n",
+    "        k += 0.5\n",
+    "\n",
+    "queue[0].to_list()\n",
+    "\n",
+    "# Find the floor of the number\n",
+    "curr, floor = queue[0], -1\n",
+    "while curr:\n",
+    "    if curr.val <= target:\n",
+    "        floor = curr.val\n",
+    "        curr = curr.right\n",
+    "    else:\n",
+    "        curr = curr.left\n",
+    "\n",
+    "print(floor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19c4167d",
+   "metadata": {},
+   "source": [
+    "Insert into a BST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "246602ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insertIntoBST(root: BinaryTreeNode, val: int) -> BinaryTreeNode:\n",
+    "    if not root:\n",
+    "        root = BinaryTreeNode(val)\n",
+    "    elif root.val < val:\n",
+    "        root.right = insertIntoBST(root.right, val)\n",
+    "    else:\n",
+    "        root.left = insertIntoBST(root.left, val)\n",
+    "\n",
+    "    return root\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert insertIntoBST(BinaryTreeNode.from_array([4,2,7,1,3]), 5).to_list() == [4,2,7,1,3,5]"
    ]
   }
  ],
