--- a/study/striver-A2Z/11-binary-search-trees.ipynb
+++ b/study/striver-A2Z/11-binary-search-trees.ipynb
@@ -300,6 +300,7 @@
      "iopub.status.idle": "2024-04-15T16:15:46.948403Z",
      "shell.execute_reply": "2024-04-15T16:15:46.947778Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.011117,
      "end_time": "2024-04-15T16:15:46.950112",
@@ -327,6 +328,146 @@
     "# Testing the solution\n",
     "assert findCeilIter(BinaryTreeNode.from_array([8,5,10,2,6,None,None,None,None,None,7,None,None]), 9) == 10\n",
     "assert findCeilIter(BinaryTreeNode.from_array([10,5,13,3,6,11,14,2,4,None,9]), 11) == 11"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c170dfe",
+   "metadata": {},
+   "source": [
+    "Floor in a BST\n",
+    "Video Link: https://youtu.be/xm_W1ub-K-w?si=ay4JzgX4mwb1RkBM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1674c736",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def findFloor(root: BinaryTreeNode, key: int) -> int:\n",
+    "    curr, floor = root, -1\n",
+    "    while curr:\n",
+    "        if curr.val <= key:\n",
+    "            floor = curr.val\n",
+    "            curr = curr.right\n",
+    "        else:\n",
+    "            curr = curr.left\n",
+    "\n",
+    "    return floor\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findFloor(BinaryTreeNode.from_array([8,5,10,2,6,None,None,None,None,None,7,None,None]), 9) == 8\n",
+    "assert findFloor(BinaryTreeNode.from_array([10,5,13,3,6,11,14,2,4,None,9]), 11) == 11"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f882be29",
+   "metadata": {},
+   "source": [
+    "Insert node into BST\n",
+    "Video Link: https://youtu.be/FiFiNvM29ps?si=gLkHgOWwfsCsZYiC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2980e200",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def insertIntoBST(root: BinaryTreeNode, val: int) -> BinaryTreeNode:\n",
+    "    prev: BinaryTreeNode|None = None\n",
+    "    curr: BinaryTreeNode|None = root\n",
+    "\n",
+    "    while curr:\n",
+    "        prev = curr\n",
+    "        if curr.val > val:\n",
+    "            curr = curr.left\n",
+    "        else:\n",
+    "            curr = curr.right\n",
+    "\n",
+    "    curr = BinaryTreeNode(val)\n",
+    "    if prev:\n",
+    "        if prev.val > val:\n",
+    "            prev.left = curr\n",
+    "        else:\n",
+    "            prev.right = curr\n",
+    "\n",
+    "    return root if prev else curr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d29f77f3",
+   "metadata": {},
+   "source": [
+    "Delete a node: https://leetcode.com/problems/delete-node-in-a-bst/submissions/1233565259\n",
+    "Video Link: https://youtu.be/kouxiP_H5WE?si=-J0yCkif1y5T8lLB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7aa66408",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def deleteNode(root: BinaryTreeNode, key: int) -> BinaryTreeNode|None:\n",
+    "    \"\"\"\n",
+    "    Time: O(Height), Space: O(1)\n",
+    "    1. Find curr such that curr.val = key (curr is node to be deleted)\n",
+    "    2. curr.right would become the new curr. curr.right.left should point to curr.left\n",
+    "    3. curr.left's rightmost node's right should point to curr.right.left\n",
+    "    \"\"\"\n",
+    "    def delete(parent: BinaryTreeNode|None, node: BinaryTreeNode):\n",
+    "        if node.right and node.left:\n",
+    "            # Find rightmost node in node.left\n",
+    "            left: BinaryTreeNode = node.left\n",
+    "            while left.right:\n",
+    "                left = left.right\n",
+    "            left.right = node.right.left\n",
+    "            node.right.left = node.left\n",
+    "\n",
+    "        # Updated curr node post node deletion\n",
+    "        post_delete = node.right if node.right else node.left\n",
+    "\n",
+    "        # If parent exists, modify parent right pointer to skip node being deleted\n",
+    "        if parent:\n",
+    "            if parent.val < node.val:\n",
+    "                parent.right = post_delete\n",
+    "            else:\n",
+    "                parent.left = post_delete\n",
+    "\n",
+    "        # If parent doesn't exist, node is root. We return new root\n",
+    "        else:\n",
+    "            nonlocal root\n",
+    "            root = post_delete\n",
+    "\n",
+    "    prev: BinaryTreeNode|None = None\n",
+    "    curr: BinaryTreeNode|None = root\n",
+    "\n",
+    "    while curr:\n",
+    "        if curr.val == key:\n",
+    "            delete(prev, curr)\n",
+    "            break\n",
+    "        elif curr.val < key:\n",
+    "            prev, curr = curr, curr.right\n",
+    "        else:\n",
+    "            prev, curr = curr, curr.left\n",
+    "\n",
+    "    return root\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert deleteNode(BinaryTreeNode.from_array([5,3,6,2,4,None,7]), 3).to_list() == [5,4,6,2,None,None,7]\n",
+    "assert deleteNode(BinaryTreeNode.from_array([2,1]), 2).to_list() == [1]\n",
+    "assert deleteNode(BinaryTreeNode.from_array([3,2,4,1]), 2).to_list() == [3,1,4]"
    ]
   }
  ],
