Striver A2Z: BST - 3, LC Practice

--- a/practice/001.ipynb
+++ b/practice/001.ipynb
@@ -4006,6 +4006,7 @@
      "iopub.status.idle": "2024-04-15T16:15:39.788071Z",
      "shell.execute_reply": "2024-04-15T16:15:39.787298Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.034936,
      "end_time": "2024-04-15T16:15:39.789701",
@@ -4029,6 +4030,81 @@
     "\n",
     "# Testing the solution\n",
     "assert insertIntoBST(BinaryTreeNode.from_array([4,2,7,1,3]), 5).to_list() == [4,2,7,1,3,5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "245f9178",
+   "metadata": {},
+   "source": [
+    "LCA in a BST of two nodes: https://leetcode.com/problems/lowest-common-ancestor-of-a-binary-search-tree/submissions/1234964550"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f723be8",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def lowestCommonAncestor(root: BinaryTreeNode, p: BinaryTreeNode, q: BinaryTreeNode) -> BinaryTreeNode:\n",
+    "    \"\"\"\n",
+    "    If root equals p/q or if p < root < q that is our LCA. Otherwise traverse left of right.\n",
+    "    Time: O(log N), Space: O(1)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    low = p if p.val < q.val else q\n",
+    "    high = q if p.val < q.val else p\n",
+    "\n",
+    "    if root.val == low.val or root.val == high.val or low.val < root.val < high.val:\n",
+    "        return root\n",
+    "    elif root.val > p.val and root.val > q.val:\n",
+    "        return lowestCommonAncestor(root.left, p, q)\n",
+    "    else:\n",
+    "        return lowestCommonAncestor(root.right, p, q)\n",
+    "\n",
+    "# Testing the solution\n",
+    "temp: BinaryTreeNode = BinaryTreeNode.from_array([6,2,8,0,4,7,9,None,None,3,5])\n",
+    "assert lowestCommonAncestor(temp, p=temp.left, q=temp.right).val == 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "591d92a4",
+   "metadata": {},
+   "source": [
+    "Smallest string starting from leaf: https://leetcode.com/problems/smallest-string-starting-from-leaf/submissions/1235018957"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "654f9b3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def smallestFromLeaf(root: BinaryTreeNode) -> str:\n",
+    "    result: str = chr(ord('z') + 1)\n",
+    "    def backtrack(curr: BinaryTreeNode, acc: str = \"\"):\n",
+    "        if curr:\n",
+    "            acc_ = chr(curr.val + ord('a')) + acc\n",
+    "            if not curr.left and not curr.right:\n",
+    "                nonlocal result\n",
+    "                result = min(result, acc_)\n",
+    "            else:\n",
+    "                backtrack(curr.left, acc_)\n",
+    "                backtrack(curr.right, acc_)\n",
+    "\n",
+    "    backtrack(root)\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert smallestFromLeaf(BinaryTreeNode.from_array([25,1,3,1,3,0,2])) == \"adz\"\n",
+    "assert smallestFromLeaf(BinaryTreeNode.from_array([2,2,1,None,1,0,None,0])) == \"abc\"\n",
+    "assert smallestFromLeaf(BinaryTreeNode.from_array([4,0,1,1])) == \"bae\"\n",
+    "assert smallestFromLeaf(BinaryTreeNode.from_array([25,1,None,0,0,1,None,None,None,0])) == \"ababz\""
    ]
   }
  ],
