--- a/study/striver-A2Z/11-binary-search-trees.ipynb
+++ b/study/striver-A2Z/11-binary-search-trees.ipynb
@@ -19,7 +19,8 @@
     "1. Left node < Root node < Right node.\n",
     "2. Left subtree, Right subtree should itself be a BST.\n",
     "3. Ideally there are no duplicates. However to allow duplicates, we can modify the condition to something like: Left <= Root < Right. Alternatively we could save a tuple of values (value, freq).\n",
-    "4. Balanced BST search: O(log N)"
+    "4. Balanced BST search: O(log N)\n",
+    "5. Inorder traversal of a BST is always in a sorted order."
    ]
   },
   {
@@ -478,6 +479,7 @@
      "iopub.status.idle": "2024-04-16T03:00:04.103710Z",
      "shell.execute_reply": "2024-04-16T03:00:04.103065Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.016227,
      "end_time": "2024-04-16T03:00:04.105350",
@@ -538,6 +540,122 @@
     "assert deleteNode(BinaryTreeNode.from_array([5,3,6,2,4,None,7]), 3).to_list() == [5,4,6,2,None,None,7]\n",
     "assert deleteNode(BinaryTreeNode.from_array([2,1]), 2).to_list() == [1]\n",
     "assert deleteNode(BinaryTreeNode.from_array([3,2,4,1]), 2).to_list() == [3,1,4]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bef16c0a",
+   "metadata": {},
+   "source": [
+    "Kth Smallest element in BST: https://leetcode.com/problems/kth-smallest-element-in-a-bst/submissions/1234432057/\n",
+    "Video Link: https://youtu.be/9TJYWh0adfk?si=J5aaXBmrPA5E6LGC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce588656",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def kthSmallest(root: BinaryTreeNode, k: int) -> int:\n",
+    "    \"\"\"\n",
+    "    Do an inorder traversal, storing the elements into an array. Return kth element.\n",
+    "\n",
+    "    Time: O(N), Space: O(N)\n",
+    "    To eliminate space: O(N), we can use Morris Inorder traversal\n",
+    "    \"\"\"\n",
+    "\n",
+    "    stack: list[BinaryTreeNode] = []\n",
+    "    curr: BinaryTreeNode = root\n",
+    "    while curr or stack:\n",
+    "        if curr:\n",
+    "            stack.append(curr)\n",
+    "            curr = curr.left\n",
+    "        else:\n",
+    "            if stack:\n",
+    "                curr = stack.pop()\n",
+    "                if k == 1:\n",
+    "                    return curr.val\n",
+    "                else:\n",
+    "                    curr = curr.right\n",
+    "                    k -= 1\n",
+    "\n",
+    "    return -1\n",
+    "\n",
+    "# Testing the solution\n",
+    "for i in range(1, 8):\n",
+    "    assert kthSmallest(BinaryTreeNode.from_array([1,None,2,None,3,None,4,None,5,None,6,None,7]), i) == i"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1c64a13",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/f-sj7I5oXEI?si=Pz_LGZrgKIHXQxi4\n",
+    "Validate a BST "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1f9a579",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/validate-binary-search-tree/submissions/1234444341\n",
+    "def isValidBST(root: BinaryTreeNode) -> bool:\n",
+    "    \"\"\"\n",
+    "    Do an inorder traversal, if at any point curr < prev it is not a valid BST.\n",
+    "\n",
+    "    Time: O(N), Space: O(N)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    prev = -math.inf\n",
+    "    stack: list[BinaryTreeNode] = []\n",
+    "    curr: BinaryTreeNode = root\n",
+    "    while stack or curr:\n",
+    "        if curr:\n",
+    "            stack.append(curr)\n",
+    "            curr = curr.left\n",
+    "        else:\n",
+    "            curr = stack.pop()\n",
+    "            if curr.val <= prev:\n",
+    "                return False\n",
+    "            else:\n",
+    "                prev = curr.val\n",
+    "                curr = curr.right\n",
+    "\n",
+    "    return True\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert isValidBST(BinaryTreeNode.from_array([5,4,6,None,None,3,7])) == False\n",
+    "assert isValidBST(BinaryTreeNode.from_array([2,2,2])) == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "142f7fb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/validate-binary-search-tree/submissions/1234448368\n",
+    "def isValidBST_striver(root: BinaryTreeNode, min_: float= -math.inf, max_: float = math.inf) -> bool:\n",
+    "    # Time: O(N), Space: O(1)\n",
+    "    if not root:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return min_ < root.val < max_ and isValidBST_striver(root.left, min_, root.val) and isValidBST_striver(root.right, root.val, max_)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert isValidBST_striver(BinaryTreeNode.from_array([5,4,6,None,None,3,7])) == False\n",
+    "assert isValidBST_striver(BinaryTreeNode.from_array([2,2,2])) == False"
    ]
   }
  ],
