--- a/study/striver-A2Z/11-binary-search-trees.ipynb
+++ b/study/striver-A2Z/11-binary-search-trees.ipynb
@@ -695,6 +695,7 @@
      "iopub.status.idle": "2024-04-17T16:25:33.313307Z",
      "shell.execute_reply": "2024-04-17T16:25:33.312462Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.014021,
      "end_time": "2024-04-17T16:25:33.315050",
@@ -717,6 +718,160 @@
     "# Testing the solution\n",
     "assert isValidBST_striver(BinaryTreeNode.from_array([5,4,6,None,None,3,7])) == False\n",
     "assert isValidBST_striver(BinaryTreeNode.from_array([2,2,2])) == False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46ae2541",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/cX_kPV_foZc?si=YCFaerCUNhJwiPEV\n",
+    "LCA in Binary Search Tree: https://leetcode.com/problems/lowest-common-ancestor-of-a-binary-search-tree/ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8233e212",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/lowest-common-ancestor-of-a-binary-search-tree/submissions/1235328177/\n",
+    "def lowestCommonAncestor(root: BinaryTreeNode, p: BinaryTreeNode, q: BinaryTreeNode) -> BinaryTreeNode:\n",
+    "    \"\"\"\n",
+    "    Striver's Approach, simplified version of my approach.\n",
+    "    Time: O(log N), Space: O(1)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    curr = root\n",
+    "    while curr:\n",
+    "        if curr.val < p.val and curr.val < q.val:\n",
+    "            curr = curr.right\n",
+    "        elif curr.val > p.val and curr.val > q.val:\n",
+    "            curr = curr.left\n",
+    "        else:\n",
+    "            break\n",
+    "\n",
+    "    return curr\n",
+    "\n",
+    "# Testing the solution\n",
+    "temp: BinaryTreeNode = BinaryTreeNode.from_array([6,2,8,0,4,7,9,None,None,3,5])\n",
+    "assert lowestCommonAncestor(temp, p=temp.left, q=temp.right).val == 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "538229a8",
+   "metadata": {},
+   "source": [
+    "Construct BST from Preorder Traversal\n",
+    "Video Link: https://youtu.be/UmJT3j26t1I?si=bZOGcW7usou-7xFK"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87fe0260",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/construct-binary-search-tree-from-preorder-traversal/submissions/1235338251\n",
+    "def bstFromPreorderBrute(preorder: list[int]) -> BinaryTreeNode|None:\n",
+    "    \"Time: O(N^2), Space: O(N)\"\n",
+    "    def insert(curr: BinaryTreeNode|None, value: int) -> BinaryTreeNode:\n",
+    "        if not curr:\n",
+    "            return BinaryTreeNode(value)\n",
+    "        elif curr.val < value:\n",
+    "            curr.right = insert(curr.right, value)\n",
+    "            return curr\n",
+    "        else:\n",
+    "            curr.left = insert(curr.left, value)\n",
+    "            return curr\n",
+    "\n",
+    "    root: BinaryTreeNode|None = None\n",
+    "    for value in preorder:\n",
+    "        root = insert(root, value)\n",
+    "\n",
+    "    return root\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert bstFromPreorderBrute([8,5,1,7,10,12]).to_list() == [8,5,10,1,7,None,12]\n",
+    "assert bstFromPreorderBrute([1,3]).to_list() == [1,None,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cea4e83a",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/construct-binary-search-tree-from-preorder-traversal/submissions/1235351347\n",
+    "def bstFromPreorderBetter(preorder: list[int]) -> BinaryTreeNode|None:\n",
+    "    \"Time: O(N log N) Space: O(N)\"\n",
+    "    N = len(preorder)\n",
+    "    inorder = sorted(preorder)\n",
+    "    inorder_indices = {n: i for i, n in enumerate(inorder)}\n",
+    "    def createBT(pStart: int, pEnd: int, iStart: int, iEnd: int) -> BinaryTreeNode|None:\n",
+    "        if iEnd - iStart < 0:\n",
+    "            return None\n",
+    "        else:\n",
+    "            curr = BinaryTreeNode(preorder[pStart])\n",
+    "            idx = inorder_indices[curr.val]\n",
+    "            curr.left = createBT(pStart + 1, pStart + idx - iStart, iStart, idx - 1)\n",
+    "            curr.right = createBT(pStart + idx - iStart + 1, pEnd, idx + 1, iEnd)\n",
+    "            return curr\n",
+    "\n",
+    "    return createBT(0, N - 1, 0, N - 1)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert bstFromPreorderBetter([8,5,1,7,10,12]).to_list() == [8,5,10,1,7,None,12]\n",
+    "assert bstFromPreorderBetter([1,3]).to_list() == [1,None,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac30bb42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/construct-binary-search-tree-from-preorder-traversal/submissions/1235363303/\n",
+    "def bstFromPreorderOptimal(preorder: list[int]) -> BinaryTreeNode:\n",
+    "    \"\"\"\n",
+    "    Time: O(N), Space: O(N).\n",
+    "    0. Initialize stack containing tuple of nodes and upper bound values.\n",
+    "    1. We insert left if value to be inserted is less than last element in stack.\n",
+    "    2. We insert right if value to be inserted is less than the lower bound of last element in stack.\n",
+    "    3. If neither of above two holds, pop last element or recurse backwards.\n",
+    "    \"\"\"\n",
+    "    root: BinaryTreeNode = BinaryTreeNode(preorder[0])\n",
+    "    stack: list[tuple[BinaryTreeNode, float]] = [(root, math.inf)]\n",
+    "    for value in preorder[1:]:\n",
+    "        curr = BinaryTreeNode(value)\n",
+    "        while stack:\n",
+    "            if value < stack[-1][0].val:\n",
+    "                stack[-1][0].left = curr\n",
+    "                stack.append((curr, stack[-1][0].val))\n",
+    "                break\n",
+    "            elif value < stack[-1][1]:\n",
+    "                stack[-1][0].right = curr\n",
+    "                stack.append((curr, stack[-1][1]))\n",
+    "                break\n",
+    "            else:\n",
+    "                stack.pop()\n",
+    "\n",
+    "    return root\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert bstFromPreorderOptimal([8,5,1,7,10,12]).to_list() == [8,5,10,1,7,None,12]\n",
+    "assert bstFromPreorderOptimal([1,3]).to_list() == [1,None,3]"
    ]
   }
  ],
